# SequentialTaskOptimization

./: LICENSE  README.md  carwash.py  pyproject.toml  recursive_bottleneck_reduction.py  train_model.py
documentation/: doc.md
