[tool.poetry]
name = "carwash"
version = "0.1.0"
description = ""
authors = ["Germuu <jeremyyamajako@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.9.2"
networkx = "^3.4.2"
pylint = "^3.3.1"
pandas = "^2.2.3"
numpy = "1.26.0"
tensorflow = "^2.18.0"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
pulp = "^2.9.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
